# serializer version: 1
# name: TestConversionGoalProcessor.test_attribution_window_sql_structure_demo
  '''
  
  SELECT
      if(notEmpty(campaign_name), campaign_name, 'organic') AS campaign,
      if(notEmpty(source_name), source_name, 'organic') AS source,
      (count() AS conversion_count) AS conversion_0
  
  FROM
      (
  SELECT
          person_id,
          if(notEmpty(conversion_campaign), conversion_campaign, if(notEmpty(fallback_campaign), fallback_campaign, '')) AS campaign_name,
          if(notEmpty(conversion_source), conversion_source, if(notEmpty(fallback_source), fallback_source, '')) AS source_name,
          1 AS conversion_value
      
  FROM
          (
  SELECT
              person_id,
              conversion_timestamps[i] AS conversion_time,
              conversion_math_values[i] AS conversion_math_value,
              conversion_campaigns[i] AS conversion_campaign,
              conversion_sources[i] AS conversion_source,
              arrayElement(arraySort(x -> minus(0, x), arrayFilter(x -> and(lessOrEquals(x, conversion_timestamps[i]), greaterOrEquals(x, minus(conversion_timestamps[i], 15552000))), utm_timestamps)), 1) AS last_utm_timestamp,
              if(notEquals(last_utm_timestamp, NULL), utm_campaigns[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_campaign,
              if(notEquals(last_utm_timestamp, NULL), utm_sources[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_source
          
  FROM
              (
  SELECT
                  events.person_id,
                  arrayFilter(x -> greater(x, 0), groupArray(if(equals(events.event, 'user signed up'), toUnixTimestamp(events.timestamp), 0))) AS conversion_timestamps,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'user signed up'), 1, NULL))) AS conversion_math_values,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'user signed up'), if(or(equals(events.properties.utm_campaign, NULL), equals(events.properties.utm_campaign, '')), '', toString(ifNull(events.properties.utm_campaign, ''))), NULL))) AS conversion_campaigns,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'user signed up'), if(or(equals(events.properties.utm_source, NULL), equals(events.properties.utm_source, '')), '', toString(ifNull(events.properties.utm_source, ''))), NULL))) AS conversion_sources,
                  arrayFilter(x -> greater(x, 0), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toUnixTimestamp(events.timestamp), 0))) AS utm_timestamps,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_campaign, '')), ''))) AS utm_campaigns,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_source, '')), ''))) AS utm_sources
              
  FROM
                  events
              
  WHERE
                  and(or(equals(events.event, '$pageview'), equals(events.event, 'user signed up')), or(and(equals(events.event, 'user signed up'), greaterOrEquals(events.timestamp, toDateTime('2025-06-06')), lessOrEquals(events.timestamp, toDateTime('2025-06-06'))), and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, ''))), lessOrEquals(events.timestamp, toDateTime('2025-06-06')), greaterOrEquals(events.timestamp, minus(toDateTime('2025-06-06'), toIntervalSecond(15552000))))))
              
  GROUP BY
                  events.person_id
              
  HAVING
                  greater(length(conversion_timestamps), 0))
          ARRAY JOIN arrayEnumerate(conversion_timestamps) AS i)) AS attributed_conversions
  
  GROUP BY
      campaign,
      source
  
  LIMIT 100
  '''
# ---
# name: TestConversionGoalProcessor.test_attribution_window_sql_structure_demo_zero_windows
  '''
  
  SELECT
      if(notEmpty(campaign_name), campaign_name, 'organic') AS campaign,
      if(notEmpty(source_name), source_name, 'organic') AS source,
      (count() AS conversion_count) AS conversion_0
  
  FROM
      (
  SELECT
          person_id,
          if(notEmpty(conversion_campaign), conversion_campaign, if(notEmpty(fallback_campaign), fallback_campaign, '')) AS campaign_name,
          if(notEmpty(conversion_source), conversion_source, if(notEmpty(fallback_source), fallback_source, '')) AS source_name,
          1 AS conversion_value
      
  FROM
          (
  SELECT
              person_id,
              conversion_timestamps[i] AS conversion_time,
              conversion_math_values[i] AS conversion_math_value,
              conversion_campaigns[i] AS conversion_campaign,
              conversion_sources[i] AS conversion_source,
              arrayElement(arraySort(x -> minus(0, x), arrayFilter(x -> and(lessOrEquals(x, conversion_timestamps[i]), greaterOrEquals(x, minus(conversion_timestamps[i], 15811200.0))), utm_timestamps)), 1) AS last_utm_timestamp,
              if(notEquals(last_utm_timestamp, NULL), utm_campaigns[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_campaign,
              if(notEquals(last_utm_timestamp, NULL), utm_sources[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_source
          
  FROM
              (
  SELECT
                  events.person_id,
                  arrayFilter(x -> greater(x, 0), groupArray(if(equals(events.event, 'user signed up'), toUnixTimestamp(events.timestamp), 0))) AS conversion_timestamps,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'user signed up'), 1, NULL))) AS conversion_math_values,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'user signed up'), if(or(equals(events.properties.utm_campaign, NULL), equals(events.properties.utm_campaign, '')), '', toString(ifNull(events.properties.utm_campaign, ''))), NULL))) AS conversion_campaigns,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'user signed up'), if(or(equals(events.properties.utm_source, NULL), equals(events.properties.utm_source, '')), '', toString(ifNull(events.properties.utm_source, ''))), NULL))) AS conversion_sources,
                  arrayFilter(x -> greater(x, 0), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toUnixTimestamp(events.timestamp), 0))) AS utm_timestamps,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_campaign, '')), ''))) AS utm_campaigns,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_source, '')), ''))) AS utm_sources
              
  FROM
                  events
              
  WHERE
                  and(or(equals(events.event, '$pageview'), equals(events.event, 'user signed up')), or(and(equals(events.event, 'user signed up'), greaterOrEquals(events.timestamp, toDateTime('2025-06-06')), lessOrEquals(events.timestamp, toDateTime('2025-06-06'))), and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, ''))), lessOrEquals(events.timestamp, toDateTime('2025-06-06')), greaterOrEquals(events.timestamp, minus(toDateTime('2025-06-06'), toIntervalSecond(15811200.0))))))
              
  GROUP BY
                  events.person_id
              
  HAVING
                  greater(length(conversion_timestamps), 0))
          ARRAY JOIN arrayEnumerate(conversion_timestamps) AS i)) AS attributed_conversions
  
  GROUP BY
      campaign,
      source
  
  LIMIT 100
  '''
# ---
# name: TestConversionGoalProcessor.test_integration_actions_node_full_query_execution
  '''
  
  SELECT
      if(notEmpty(campaign_name), campaign_name, 'organic') AS campaign,
      if(notEmpty(source_name), source_name, 'organic') AS source,
      (count() AS conversion_count) AS conversion_0
  
  FROM
      (
  SELECT
          person_id,
          if(notEmpty(conversion_campaign), conversion_campaign, if(notEmpty(fallback_campaign), fallback_campaign, '')) AS campaign_name,
          if(notEmpty(conversion_source), conversion_source, if(notEmpty(fallback_source), fallback_source, '')) AS source_name,
          1 AS conversion_value
      
  FROM
          (
  SELECT
              person_id,
              conversion_timestamps[i] AS conversion_time,
              conversion_math_values[i] AS conversion_math_value,
              conversion_campaigns[i] AS conversion_campaign,
              conversion_sources[i] AS conversion_source,
              arrayElement(arraySort(x -> minus(0, x), arrayFilter(x -> and(lessOrEquals(x, conversion_timestamps[i]), greaterOrEquals(x, minus(conversion_timestamps[i], 259200000))), utm_timestamps)), 1) AS last_utm_timestamp,
              if(notEquals(last_utm_timestamp, NULL), utm_campaigns[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_campaign,
              if(notEquals(last_utm_timestamp, NULL), utm_sources[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_source
          
  FROM
              (
  SELECT
                  events.person_id,
                  arrayFilter(x -> greater(x, 0), groupArray(if(equals(events.event, 'purchase'), toUnixTimestamp(events.timestamp), 0))) AS conversion_timestamps,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'purchase'), 1, NULL))) AS conversion_math_values,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'purchase'), if(or(equals(events.properties.utm_campaign, NULL), equals(events.properties.utm_campaign, '')), '', toString(ifNull(events.properties.utm_campaign, ''))), NULL))) AS conversion_campaigns,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'purchase'), if(or(equals(events.properties.utm_source, NULL), equals(events.properties.utm_source, '')), '', toString(ifNull(events.properties.utm_source, ''))), NULL))) AS conversion_sources,
                  arrayFilter(x -> greater(x, 0), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toUnixTimestamp(events.timestamp), 0))) AS utm_timestamps,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_campaign, '')), ''))) AS utm_campaigns,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_source, '')), ''))) AS utm_sources
              
  FROM
                  events
              
  WHERE
                  and(or(equals(events.event, '$pageview'), equals(events.event, 'purchase')), or(and(equals(events.event, 'purchase'), greaterOrEquals(events.timestamp, toDateTime('2023-01-01')), lessOrEquals(events.timestamp, toDateTime('2023-01-31'))), and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, ''))), lessOrEquals(events.timestamp, toDateTime('2023-01-31')), greaterOrEquals(events.timestamp, minus(toDateTime('2023-01-01'), toIntervalSecond(259200000))))))
              
  GROUP BY
                  events.person_id
              
  HAVING
                  greater(length(conversion_timestamps), 0))
          ARRAY JOIN arrayEnumerate(conversion_timestamps) AS i)) AS attributed_conversions
  
  GROUP BY
      campaign,
      source
  
  LIMIT 100
  '''
# ---
# name: TestConversionGoalProcessor.test_integration_events_node_full_query_execution
  '''
  
  SELECT
      if(notEmpty(campaign_name), campaign_name, 'organic') AS campaign,
      if(notEmpty(source_name), source_name, 'organic') AS source,
      (count() AS conversion_count) AS conversion_0
  
  FROM
      (
  SELECT
          person_id,
          if(notEmpty(conversion_campaign), conversion_campaign, if(notEmpty(fallback_campaign), fallback_campaign, '')) AS campaign_name,
          if(notEmpty(conversion_source), conversion_source, if(notEmpty(fallback_source), fallback_source, '')) AS source_name,
          1 AS conversion_value
      
  FROM
          (
  SELECT
              person_id,
              conversion_timestamps[i] AS conversion_time,
              conversion_math_values[i] AS conversion_math_value,
              conversion_campaigns[i] AS conversion_campaign,
              conversion_sources[i] AS conversion_source,
              arrayElement(arraySort(x -> minus(0, x), arrayFilter(x -> and(lessOrEquals(x, conversion_timestamps[i]), greaterOrEquals(x, minus(conversion_timestamps[i], 259200000))), utm_timestamps)), 1) AS last_utm_timestamp,
              if(notEquals(last_utm_timestamp, NULL), utm_campaigns[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_campaign,
              if(notEquals(last_utm_timestamp, NULL), utm_sources[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_source
          
  FROM
              (
  SELECT
                  events.person_id,
                  arrayFilter(x -> greater(x, 0), groupArray(if(equals(events.event, 'sign_up'), toUnixTimestamp(events.timestamp), 0))) AS conversion_timestamps,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'sign_up'), 1, NULL))) AS conversion_math_values,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'sign_up'), if(or(equals(events.properties.utm_campaign, NULL), equals(events.properties.utm_campaign, '')), '', toString(ifNull(events.properties.utm_campaign, ''))), NULL))) AS conversion_campaigns,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'sign_up'), if(or(equals(events.properties.utm_source, NULL), equals(events.properties.utm_source, '')), '', toString(ifNull(events.properties.utm_source, ''))), NULL))) AS conversion_sources,
                  arrayFilter(x -> greater(x, 0), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toUnixTimestamp(events.timestamp), 0))) AS utm_timestamps,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_campaign, '')), ''))) AS utm_campaigns,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_source, '')), ''))) AS utm_sources
              
  FROM
                  events
              
  WHERE
                  and(or(equals(events.event, '$pageview'), equals(events.event, 'sign_up')), or(and(equals(events.event, 'sign_up'), greaterOrEquals(events.timestamp, toDateTime('2023-01-01')), lessOrEquals(events.timestamp, toDateTime('2023-01-31'))), and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, ''))), lessOrEquals(events.timestamp, toDateTime('2023-01-31')), greaterOrEquals(events.timestamp, minus(toDateTime('2023-01-01'), toIntervalSecond(259200000))))))
              
  GROUP BY
                  events.person_id
              
  HAVING
                  greater(length(conversion_timestamps), 0))
          ARRAY JOIN arrayEnumerate(conversion_timestamps) AS i)) AS attributed_conversions
  
  GROUP BY
      campaign,
      source
  
  LIMIT 100
  '''
# ---
# name: TestConversionGoalProcessor.test_integration_sum_math_full_query_execution
  '''
  
  SELECT
      if(notEmpty(campaign_name), campaign_name, 'organic') AS campaign,
      if(notEmpty(source_name), source_name, 'organic') AS source,
      sum(conversion_value) AS conversion_0
  
  FROM
      (
  SELECT
          person_id,
          if(notEmpty(conversion_campaign), conversion_campaign, if(notEmpty(fallback_campaign), fallback_campaign, '')) AS campaign_name,
          if(notEmpty(conversion_source), conversion_source, if(notEmpty(fallback_source), fallback_source, '')) AS source_name,
          toFloat(conversion_math_value) AS conversion_value
      
  FROM
          (
  SELECT
              person_id,
              conversion_timestamps[i] AS conversion_time,
              conversion_math_values[i] AS conversion_math_value,
              conversion_campaigns[i] AS conversion_campaign,
              conversion_sources[i] AS conversion_source,
              arrayElement(arraySort(x -> minus(0, x), arrayFilter(x -> and(lessOrEquals(x, conversion_timestamps[i]), greaterOrEquals(x, minus(conversion_timestamps[i], 259200000))), utm_timestamps)), 1) AS last_utm_timestamp,
              if(notEquals(last_utm_timestamp, NULL), utm_campaigns[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_campaign,
              if(notEquals(last_utm_timestamp, NULL), utm_sources[indexOf(utm_timestamps, last_utm_timestamp)], '') AS fallback_source
          
  FROM
              (
  SELECT
                  events.person_id,
                  arrayFilter(x -> greater(x, 0), groupArray(if(equals(events.event, 'purchase'), toUnixTimestamp(events.timestamp), 0))) AS conversion_timestamps,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'purchase'), toFloat(ifNull(events.properties.revenue, '0')), NULL))) AS conversion_math_values,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'purchase'), if(or(equals(events.properties.utm_campaign, NULL), equals(events.properties.utm_campaign, '')), '', toString(ifNull(events.properties.utm_campaign, ''))), NULL))) AS conversion_campaigns,
                  arrayFilter(x -> notEquals(x, NULL), groupArray(if(equals(events.event, 'purchase'), if(or(equals(events.properties.utm_source, NULL), equals(events.properties.utm_source, '')), '', toString(ifNull(events.properties.utm_source, ''))), NULL))) AS conversion_sources,
                  arrayFilter(x -> greater(x, 0), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toUnixTimestamp(events.timestamp), 0))) AS utm_timestamps,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_campaign, '')), ''))) AS utm_campaigns,
                  arrayFilter(x -> notEmpty(x), groupArray(if(and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, '')))), toString(ifNull(events.properties.utm_source, '')), ''))) AS utm_sources
              
  FROM
                  events
              
  WHERE
                  and(or(equals(events.event, '$pageview'), equals(events.event, 'purchase')), or(and(equals(events.event, 'purchase'), greaterOrEquals(events.timestamp, toDateTime('2023-01-01')), lessOrEquals(events.timestamp, toDateTime('2023-01-31'))), and(equals(events.event, '$pageview'), notEmpty(toString(ifNull(events.properties.utm_campaign, ''))), notEmpty(toString(ifNull(events.properties.utm_source, ''))), lessOrEquals(events.timestamp, toDateTime('2023-01-31')), greaterOrEquals(events.timestamp, minus(toDateTime('2023-01-01'), toIntervalSecond(259200000))))))
              
  GROUP BY
                  events.person_id
              
  HAVING
                  greater(length(conversion_timestamps), 0))
          ARRAY JOIN arrayEnumerate(conversion_timestamps) AS i)) AS attributed_conversions
  
  GROUP BY
      campaign,
      source
  
  LIMIT 100
  '''
# ---
